--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 .tip-container main {
-  padding: 40px 20px;
+  padding: 30px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -65,6 +65,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 
 .tip-container main p {
@@ -72,6 +73,7 @@ body {
           box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
   padding: 10px;
+  border-radius: 5px;
 }
 
 .tip-container main p label {
@@ -103,15 +105,53 @@ body {
           transform: scale(0.98);
 }
 
+.tip-container main .loader {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 5px;
+}
+
+.tip-container main .loader span:first-child {
+  font-size: 15px;
+  font-weight: 400;
+  font-family: cursive;
+}
+
+.tip-container main .loader .loaderbar {
+  display: inline-block;
+  margin-left: 15px;
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  border: 4px solid #18227c;
+  border-bottom: 4px solid #7b1fa2;
+  -webkit-box-shadow: 0 5px 5px crimson;
+          box-shadow: 0 5px 5px crimson;
+  -webkit-animation: spin .5s linear infinite;
+          animation: spin .5s linear infinite;
+}
+
+.tip-container main .hide-loader {
+  display: none;
+}
+
 .tip-container .error-modal {
   position: absolute;
-  top: 25%;
+  top: 0%;
   background-color: crimson;
   color: white;
-  width: 70%;
+  width: 100%;
   padding: 10px;
-  right: 15%;
+  left: 0;
   display: none;
+  text-align: center;
+  -webkit-animation: fade .5s;
+          animation: fade .5s;
 }
 
 .tip-container .modal-container {
@@ -163,4 +203,44 @@ body {
 .tip-container .modal-container .modal button:active {
   -webkit-transform: scale(0.98);
           transform: scale(0.98);
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
