--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,13 +46,15 @@ body{
         font-family: cursive;
     }
     main{
-        padding: 40px 20px;
+        padding: 30px 20px;
         display: flex;
         flex-direction: column;
+        position: relative;
         p{
             box-shadow: 0 2px 10px rgba(0,0,0,0.3);
             margin-bottom: 20px;
             padding: 10px ;
+            border-radius: 5px;
 
             label{
                 display: block;
@@ -79,17 +81,46 @@ body{
                 transform: scale(.98);
             }
         }
+        .loader{
+            // display: flex;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            margin-top: 5px;
+            span:first-child{
+                font-size: 15px;
+                font-weight: 400;
+                font-family: cursive;
+            }
+            .loaderbar{
+                display: inline-block;
+                margin-left: 15px;
+                height: 18px;
+                width: 18px;
+                border-radius: 50%;
+                border: 4px solid $Secondary;
+                border-bottom: 4px solid $Primary;
+                box-shadow: 0 5px 5px crimson;
+                animation: spin .5s linear infinite ;
+            }
+        }
+        .hide-loader{
+            display: none;
+        }
     }
     .error-modal{
         position: absolute;
-        top: 25%;
+        top: 0%;
         background-color: crimson;
         color: white;
-        width: 70%;
+        width: 100%;
         padding: 10px;
-        right: 15%;
+        left: 0;
         display: none;
+        text-align: center;
+        animation: fade .5s;
     }
+    
     .modal-container{
         position: fixed;
         top: 0;
@@ -131,4 +162,12 @@ body{
             }
         }
     }
+}
+@keyframes fade{
+    from{opacity: 0;}
+    to{opacity: 1;}
+}
+@keyframes spin{
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
 }
