--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,33 @@ body {
           transform: scale(0.98);
 }
 
+.tip-container footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 5px;
+}
+
+.tip-container footer p {
+  font-size: 14px;
+  text-decoration: underline;
+}
+
+.tip-container footer a {
+  font-size: 20px;
+  color: crimson;
+}
+
 @-webkit-keyframes fade {
   from {
     opacity: 0;
